--- a/src/app/app/components/page-confirm/page-confirm.component.html
+++ b/src/app/app/components/page-confirm/page-confirm.component.html
@@ -1,5 +1,5 @@
 <div class="modal-confirm-page">
-  <div [config]="config" bsModal #confirmModal="bs-modal" class="modal fade" tabindex="-1" role="dialog">
+  <div [config]="config" bsModal #confirmModal="bs-modal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered modal-sm">
       <div class="modal-content">
         <div class="modal-header">
